crates/opengp-ui/src/ui/components/snapshots/opengp_ui__ui__components__status_bar__tests__status_bar_snapshot_normal_state.snap
---
source: crates/opengp-ui/src/ui/components/status_bar.rs
assertion_line: 263
expression: terminal.backend()
---
"Patients───────────────────Search: / | New: n | Refre────────────────────F1 Help"
"                                                                                "
"                                                                                "
