crates/opengp-ui/src/ui/components/snapshots/opengp_ui__ui__components__status_bar__tests__status_bar_snapshot_with_custom_content.snap
---
source: crates/opengp-ui/src/ui/components/status_bar.rs
assertion_line: 305
expression: terminal.backend()
---
"Custom Section─────────────Custom Center────────────────────────────Custom Right"
"                                                                                "
"                                                                                "
