crates/opengp-ui/src/ui/components/snapshots/opengp_ui__ui__components__status_bar__tests__status_bar_snapshot_with_error.snap
---
source: crates/opengp-ui/src/ui/components/status_bar.rs
assertion_line: 284
expression: terminal.backend()
---
"Patients───────────────────Error: Patient not found──────────────────────F1 Help"
"                                                                                "
"                                                                                "
